# Ramadan-Coding-Nights

./: pyproject.toml
.streamlit/: secrets.toml
money-making-machine/: main.py  pyproject.toml
password-generator/: main.py
simple-api/: main.py
time-zone-app/: main.py
todo-cli/: todo.json  todo.py
unit-converter/: unit_converter.py
