[tool.poetry]
name = "ramadan-coding-nights"
version = "0.1.0"
description = "A collection of Streamlit apps"
authors = ["Ayesha Mughal"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
streamlit = "^1.32.0"
requests = "^2.31.0"
zoneinfo = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 